--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,3 +31,13 @@ flutter:
     - assets/images/girl/10.png
     - assets/images/girl/11.png
     - assets/images/girl/12.png
+    - assets/images/girl2/1.png
+    - assets/images/girl2/2.png
+    - assets/images/girl2/3.png
+    - assets/images/girl2/4.png
+    - assets/images/girl2/5.png
+    - assets/images/girl2/6.png
+    - assets/images/girl2/7.png
+    - assets/images/girl2/8.png
+    - assets/images/girl2/9.png
+    - assets/images/girl2/10.png
