--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flame: ^0.29.3
+  flame_flare: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -41,3 +42,4 @@ flutter:
     - assets/images/girl2/8.png
     - assets/images/girl2/9.png
     - assets/images/girl2/10.png
+    - assets/images/Teddy.flr
